--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "post": "node scripts/new-post.js"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.15",
